--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,24 +3,80 @@
 :root {
   --background: #ffffff;
   --foreground: #171717;
+
+  --font-inter: 'inter';
+  --font-roboto-mono: "roboto-mono";
 }
 
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
+@theme {
+  --font-inter: "inter";
+  --font-roboto-mono: "roboto-mono";
+  --breakpoint-xl: 1280px;
+  --breakpoint-lg: 1024px;
+  --breakpoint-tablet: 850px;
+  --breakpoint-md: 768px;
+  --breakpoint-sm: 640px;
+  --breakpoint-smm: 680px;
+  --breakpoint-phone: 450px;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+html, body {
+  /* height: 100%; */
+  /* overflow: hidden; */
+}
+
+.lead {
+  /* will-change: transform; */
 }
 
 body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  margin: 0;
+  overflow-x: hidden;
+  font-size: 12px;
+  font-family:  var(--font-roboto-mono);
+}
+
+.fade_text {
+  color: #8A8A8A;
+} 
+
+.black_text {
+  color: #18181B;
+  font-size: 13px !important;
+  font-family: var(--font-inter);
+}
+
+.scroll-wrapper {
+  width: 100vw;
+  /* height: 100vh; */
+  overflow: hidden;
+  display: flex;
+  align-items: center;
+}
+
+.scroll-content {
+  display: flex;
+  gap: 20px;
+  width: max-content;
+}
+
+.item {
+  width: 300px;
+  height: 300px;
+  background: lightblue;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 24px;
+}
+
+
+.bg-overlay {
+  position: absolute;
+  top: 0;
+  left: -100%;
+  width: 100%;
+  height: 100%;
+  background: black;
+  z-index: 1;
 }
