--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -34,6 +34,7 @@ body {
   overflow-x: hidden;
   font-size: 12px;
   font-family:  var(--font-roboto-mono);
+  background-color: #F7F7F7;
 }
 
 .fade_text {
