--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -81,3 +81,12 @@ body {
   background: black;
   z-index: 1;
 }
+
+.deep-section {
+  position: absolute;
+  top: 0;
+  left: 20%;
+  width: 100px;
+  height: 6px;
+  background-color: #000;
+}
